update slides for Jun 28 talk

--- a/Ilya-SSI/Jun-28-2024-slides.tex
+++ b/Ilya-SSI/Jun-28-2024-slides.tex
@@ -140,18 +140,24 @@ Ilya is the only person who played a key role in all three modern {\bf ``phase t
   \item GPT-4 (2023 public release)\\[2ex]
 \end{itemize}
 
+Many people think he can do it again.\\[2ex]
+
 He was sharing his thoughts on {\bf existential safety for a world with superintelligent AI systems} quite a bit last year,
 and I made some notes of it:\\[2ex]
 
-\href{https://www.lesswrong.com/posts/TpKktHS8GszgmMw4B/ilya-sutskever-s-thoughts-on-ai-safety-july-2023-a}{\tt\tiny \msblue{https://www.lesswrong.com/posts/TpKktHS8GszgmMw4B/ilya-sutskever-s-thoughts-on-ai-safety-july-2023-a}}
+\href{https://www.lesswrong.com/posts/TpKktHS8GszgmMw4B/ilya-sutskever-s-thoughts-on-ai-safety-july-2023-a}{\tt\tiny \msblue{https://www.lesswrong.com/posts/TpKktHS8GszgmMw4B/ilya-sutskever-s-thoughts-on-ai-safety-july-2023-a}}\\[2ex]
+
+Before presenting his thoughts, I'll discuss the situation.
 
 \end{frame}
 
 \begin{frame}
 
-  \frametitle{Timelines, AI self-improvement, and speed of changes}
+  \frametitle{{\bf AI self-improvement}, timelines, and speed of changes}
 
-The main factor: how much will AI systems contribute to making AI systems better/stronger/more capable.\\[2ex]
+How to think about takeoff and transition to superintelligence?\\[2ex]
+
+{\bf The main factor:} how much will AI systems contribute to making AI systems better/stronger/more capable.\\[2ex]
 
 Tom Davidson in his ``Takeoff speeds presentation at Anthropic"\\[2ex] 
 
@@ -174,9 +180,11 @@ AI R\&D by AI is still relatively moderate.
 
   \frametitle{Superintelligence and self-modification}
 
-Superintelligent system self-modify rapidly\\(experiment with their modified copies a lot).\\[2ex]
+For our purposes: {\bf superintelligent systems are systems which are much better than humans at AI R\&D}.\\[2ex]
 
-Ecosystems containing superintelligent systems\\self-modify rapidly, producing
+Superintelligent system will self-modify rapidly\\(experiment with their modified copies a lot).\\[2ex]
+
+Ecosystems containing superintelligent systems\\will self-modify rapidly, producing
 \begin{itemize}
   \item novel AIs
   \item novel kinds of collectives
@@ -185,8 +193,9 @@ Ecosystems containing superintelligent systems\\self-modify rapidly, producing
 \end{itemize} 
 
 A world with superintelligent AI systems is a moving target.\\[2ex]
-If we want it to have any particular properties
-it is not easy.
+
+{\bf If we want it to have any particular properties we want,
+this is not easy. Strong potential for unpredictable blow-up.}
 
 \end{frame}
 
@@ -217,9 +226,9 @@ through radical self-modifications of AIs and of the world?
 
   \frametitle{non-adversarial (collaborative) approaches (how I see it)}
 
-Any feasible approach must take interests and rights of everyone into account\\[2ex]
+Any feasible approach must take interests and rights of {\bf everyone} into account\\[2ex]
 
-This notion of ``everyone" definitely includes smart AI systems.\\[2ex]
+This notion of {\bf ``everyone"} definitely includes smart AI systems.\\[2ex]
 
 It's not ``us vs. them"\\[2ex]
 
@@ -244,8 +253,8 @@ Any anthropocentric properties we might particularly desire should be
 
 We want to get what we need without trying to make humans central.\\[2ex]
 
-Humans are just individuals, and individuals (human or not) have rights and interests 
-which need to be protected.\\[2ex]
+Humans are just individuals, and {\bf individuals (human or not) have rights and interests 
+which need to be protected}.\\[2ex]
 
 One possible way this could happen and be maintained:\\[2ex]
 
