--- a/research-agenda/dmm-collaborative-research-agenda.tex
+++ b/research-agenda/dmm-collaborative-research-agenda.tex
@@ -40,7 +40,7 @@ Michael A. Bukatin
 
 
 \vspace{0.085in}
-December 25, 2024\footnote{Version 2.8 {\bf in progress towards Version 3.0, pages 1-3 are up to date}.\\Version 2.4 (09-28-2022) is at
+December 25, 2024\footnote{Version 2.9 {\bf in progress towards Version 3.0, pages 1-4 are up to date}.\\Version 2.4 (09-28-2022) is at
 \href{https://github.com/anhinga/2021-notes/tree/master/research-agenda}
 {\tt https://github.com/anhinga/2021-notes/tree/master/research-agenda}}
 
@@ -305,6 +305,19 @@ Julia Flux and JAX is extremely helpful and saves a lot of coding labor for peop
 
 I believe that the interplay between DMMs and Transformers is an extremely promising direction and I advocate further research and exploration of
 various aspects of this topic.
+
+\subsection{Embedding neural machines into modulating fields}
+
+It is well known that biological neural networks are affected by electromagnetic fields, and it is strongly suspected that
+electromagnetic fields a biological neural network produces itself plays a significant role in enhancing its own functioning.
+
+There are various ways to produce abstractions of these phenomena suitable for use in artificial neural machines,
+including not just spiking neural networks, but also DMMs and Transformers. I recently published a slide deck which
+might serve as an introduction to this line of thought\footnote{See 
+\href{https://github.com/anhinga/2024-notes/tree/main/modulating-fields}{\tt https://github.com/anhinga/2024-notes/tree/main/modulating-fields} (October 2024)} .
+
+This is an ongoing research project.
+
 
 \section{Aspects of practical implementation}
 
