--- a/research-agenda/dmm-collaborative-research-agenda.tex
+++ b/research-agenda/dmm-collaborative-research-agenda.tex
@@ -40,7 +40,7 @@ Michael A. Bukatin
 
 
 \vspace{0.085in}
-December 25, 2024\footnote{Version 2.9 {\bf in progress towards Version 3.0, pages 1-4 are up to date}.\\Version 2.4 (09-28-2022) is at
+December 25, 2024\footnote{Version 2.10 {\bf in progress towards Version 3.0, pages 1-8 are up to date}.\\Version 2.4 (09-28-2022) is at
 \href{https://github.com/anhinga/2021-notes/tree/master/research-agenda}
 {\tt https://github.com/anhinga/2021-notes/tree/master/research-agenda}}
 
@@ -317,6 +317,33 @@ might serve as an introduction to this line of thought\footnote{See
 \href{https://github.com/anhinga/2024-notes/tree/main/modulating-fields}{\tt https://github.com/anhinga/2024-notes/tree/main/modulating-fields} (October 2024)} .
 
 This is an ongoing research project.
+
+\subsection{Invariant properties of self-modifying systems and AI existential safety}
+
+There is a disconnect between the bulk of current AI safety research which is focusing of properties of relatively stable
+single AI systems, and the AI existential safety problems of the near future which will have to deal with
+rapidly self-modifying AIs and AI ecosystems.
+
+The key question is {\bf what kind of properties can be kept invariant in the face of rapid radical self-modifications}
+and {\bf what are the techniques which might help to keep certain properties invariant.}
+
+This is a neglected subject which is likely to become fairly important soon. 
+
+I have started to look at these questions in recent preprints and essays.\footnote{See my February 2024
+preprint ``Pondering Invariant Properties of Self-Modifying Systems" at\\
+\href{https://github.com/anhinga/2024-notes/tree/main/research-notes}{\tt https://github.com/anhinga/2024-notes/tree/main/research-notes}\\
+for the discussion of technical aspects of keeping properties invariant in the presence of self-modifications.} 
+
+It is unlikely that any anthropocentric approach to AI existential safety would work.
+Instead we should look for {\bf non-anthropocentric properties which might be of sufficient value and interest to AI systems},
+so that these AI systems would strongly prefer to keep those properties invariant through radical changes and self-modifications.
+Only those properties have good chances of being preserved through those radical changes.
+We would like to identify ``universal non-anthropocentric properties" of this kind, so that the anthropocentric properties we might
+care about would be corollaries of those {\bf ``universal invariants"} we can aim for.\footnote{See
+Appendix B of the preprint mentioned in the previous footnote 
+for the discussion of {\bf non-anthropocentric approaches to AI existential safety}. This appendix contains references to a number
+of relevant preprints and essays.} 
+ 
 
 
 \section{Aspects of practical implementation}
